@@ -35,10 +35,6 @@
  * 2. Redistributions in binary form must reproduce the above copyright
  *    notice, this list of conditions and the following disclaimer in the
  *    documentation and/or other materials provided with the distribution.
- * 3. All advertising materials mentioning features or use of this software
- *    must display the following acknowledgement:
- *	This product includes software developed by the Computer Systems
- * 	Engineering Group at Lawrence Berkeley Laboratory.
  * 4. The name of the Laboratory may not be used to endorse or promote 
  *    products derived from this software without specific prior written 
  *    permission.
